--- a/src/index.css
+++ b/src/index.css
@@ -39,11 +39,9 @@ code {
 /* Control the left side */
   .left {
     left: 0;
-    width: 62%;
-    background: linear-gradient(-45deg, rgb(151, 44, 186),#e73c7e, purple);
-    background-size: 400% 400%;
-    animation: gradient 15s ease infinite;
+    width: 50%;
   }
+
   @keyframes slide {
     0% {
       left: 0;
@@ -91,13 +89,16 @@ code {
     animation: slide 50s ease-in-out infinite;
   }
 
-
+.appImage{
+  width: 65%;
+  margin: 15% 0 0 10%;
+}
 
   
   /* Control the right side */
   .right {
     right: 0;
-    width: 38%;
+    width: 50%;
     display: block;
   }
 
@@ -129,19 +130,19 @@ code {
 }
 
 #submitBtn {
-    margin: 3% 36% ;
-    font-family: sans-serif; 
-    border: none;
-    border-radius: 21px;
-    color: white;
-    padding: 5px 70px ;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 18px;
-    background:  rgb(144, 1, 144);
-    background-size: 400% 400%;
-    animation: gradient 15s ease infinite;
-    transition: 0.5s;
+  margin: 6% 30%;
+  font-family: sans-serif;
+  border: none;
+  border-radius: 21px;
+  color: white;
+  padding: 5px 22px;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 18px;
+  background: rgb(144, 1, 144);
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+  transition: 0.5s;
   }
   #submitBtn:hover {
     background: rgb(120, 1, 120);
